--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-REACT_APP_BASE_API_URL=http://localhost:8000/api/v2/pages/
+NEXT_PUBLIC_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_BASE_API_URL=$NEXT_PUBLIC_BASE_URL/api/v2
+NEXT_PUBLIC_BASE_PAGES_API_URL=$NEXT_PUBLIC_BASE_API_URL/pages/
+NEXT_PUBLIC_BASE_IMAGES_API_URL=$NEXT_PUBLIC_BASE_API_URL/images/
