--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
@@ -27,12 +28,13 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
+    "@types/react-modal": "^3.16.3",
     "@types/testing-library__jest-dom": "5.14.5",
+    "autoprefixer": "^10.4.13",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "typescript": "4.9.5",
-    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.6"
+    "tailwindcss": "^3.2.6",
+    "typescript": "4.9.5"
   }
 }
