--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ NEXT_PUBLIC_BASE_URL=http://localhost:8000
 NEXT_PUBLIC_BASE_API_URL=$NEXT_PUBLIC_BASE_URL/api/v2
 NEXT_PUBLIC_BASE_PAGES_API_URL=$NEXT_PUBLIC_BASE_API_URL/pages/
 NEXT_PUBLIC_BASE_IMAGES_API_URL=$NEXT_PUBLIC_BASE_API_URL/images/
+NEXT_WEATHER_API_BASE_URL=https://api.weatherapi.com
+NEXT_WEATHER_API_FORECAST_URL=$NEXT_WEATHER_API_BASE_URL/v1/forecast.json
+NEXT_WEATHER_API_KEY=7c9fcbe45a24452299820755232112
+NEXT_PUBLIC_WEATHER_ENDPOINT=/api/weather/
