--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "react-hooks/exhaustive-deps": "off",
-    "@next/next/no-document-import-in-page": "off"
+    "react-hooks/exhaustive-deps": "off"
   }
 }
