--- a/fly.toml
+++ b/fly.toml
@@ -7,8 +7,8 @@ app = 'mysite-frontend'
 primary_region = 'ord'
 
 [build]
-  [build.args]
-    NEXT_PUBLIC_EXAMPLE = 'Value goes here'
+  builder = "paketobuildpacks/builder:base"
+  buildpacks = ["gcr.io/paketo-buildpacks/nodejs"]
 
 [env]
   PORT = '8080'
