--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@tanstack/react-query": "^4.24.10",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
@@ -28,11 +30,11 @@
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
+    "autoprefixer": "^10.4.13",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "typescript": "4.9.5",
-    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.6"
+    "tailwindcss": "^3.2.6",
+    "typescript": "4.9.5"
   }
 }
