--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
@@ -19,21 +21,32 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "next": "13.0.6",
+    "next": "^14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.3",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/addon-onboarding": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/nextjs": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/test": "^8.0.10",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
     "autoprefixer": "^10.4.13",
+    "eslint-plugin-storybook": "^0.8.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "postcss": "^8.4.20",
+    "storybook": "^8.0.10",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
   }
