--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.9.1",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
